<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">(๑•ᴗ•๑)</string>
    <string name="input_username">请输入用户名</string>
    <string name="username">用户名：</string>
    <string name="password">主密码:</string>
    <string name="input_mpw">密码错了我不管哟(￣︶￣)</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="checksum">校验词:</string>
    <string name="hint_checksum">请输入一个用于验证的字符串</string>
    <string name="finished">完成</string>
    <string name="register_notes">主密码不会以任何形式被存储，请自行记住主密码，一旦忘记，将不可找回。︿(￣︶￣)︿</string>
    <string name="hint_ensure_pwd">请再输入一次密码</string>
    <string name="pwd_hints">密码提示:</string>
    <string name="hint_pwd_hints">请为您的密码设置提示词</string>
    <string name="hint_pwd">密码提示</string>
    <string name="user_not_registered">用户名未注册</string>
    <string name="rb_website">网页密码</string>
    <string name="rb_cards">卡密码</string>
    <string name="rb_notes">其他</string>
    <string name="domain_tv">域名：</string>
    <string name="hint_domain_input">请输入网站域名</string>
    <string name="webpwd_tv">密码：</string>
    <string name="hint_webpwd_input">请输入网站密码</string>
    <string name="card_number">卡号：</string>
    <string name="hint_card_number_input">请输入卡号</string>
    <string name="card_name">名称：</string>
    <string name="hint_card_name_input">请输入用于标记这张卡的名称</string>
    <string name="card_pwd">卡密码：</string>
    <string name="hint_card_pwd_input">请输入卡密码</string>
    <string name="note_name">标签: </string>
    <string name="hint_note_name_input">请输入笔记名称</string>
    <string name="note_content">内容：</string>
    <string name="add_website_menu">添加网页密码</string>
    <string name="add_card_menu">添加卡密码</string>
    <string name="add_note_menu">添加笔记</string>
    <string name="add_menu_label">添加</string>
    <string name="homepage_label">主页</string>
    <string name="register_label">注册</string>
    <string name="password_hint_label">密码提示</string>
    <string name="display_message">密码</string>
    <string name="cancel">取消</string>
    <string name="user_existed">名字被人占用了￣へ￣</string>
    <string name="bad_pwd_hint">密码提示会被看到，不能跟密码太像哦~</string>
    <string name="register_mpw">请输入并记住密码</string>
    <string name="register_pwd_hint">请输入密码提示词</string>
    <string name="plus">+</string>
    <string name="content_dialog_title">(/▽╲)</string>
    <string name="copy">复制密码</string>
    <string name="hint_note_content_input">请输入内容</string>
    <string name="edit">编辑</string>
    <string name="remove">删除</string>
    <string name="display">密码</string>
    <string name="remove_everything">删除当前用户</string>
    <string name="ensure_remove">确定要删除当前用户及其所有内容吗？</string>
    <string name="ensure">确定</string>
    <string name="nickname">昵称</string>
</resources>
