<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TextView
            android:text="@string/card_number"
            android:id="@+id/add_card_number_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <EditText
            android:hint="@string/hint_card_number_input"
            android:layout_below="@id/add_card_number_tv"
            android:id="@+id/add_card_number_input"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>
    <TextView
            android:layout_below="@id/add_card_number_input"
            android:text="@string/card_name"
            android:id="@+id/add_card_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <EditText
            android:hint="@string/hint_card_name_input"
            android:layout_below="@id/add_card_name_tv"
            android:id="@+id/add_card_name_input"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>
    <TextView
            android:id="@+id/add_card_pwd_tv"
            android:layout_below="@id/add_card_name_input"
            android:text="@string/card_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <EditText
            android:id="@+id/add_card_pwd_input"
            android:hint="@string/hint_card_pwd_input"
            android:layout_below="@id/add_card_pwd_tv"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>

</RelativeLayout>